Fixed project box displaying gap when sorting with the colors on the right

--- a/laugin-project-planner/src/main/resources/static/styles/style.css
+++ b/laugin-project-planner/src/main/resources/static/styles/style.css
@@ -61,7 +61,6 @@ body {
 }
 
 .container {
-    display: flex;
     flex-direction: column;
     gap: 10px;
     width: 300px;
